tests/errors/lexer/unrecognized_token.rcm
fn main() void {
	let foo@: i32 = 3;
	let bar = $;
}
